--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -7,7 +7,7 @@
     <system:String x:Key="item3">Версия</system:String>
     <system:String x:Key="item4">Моля Изчакай</system:String>
     <system:String x:Key="item8">Играй</system:String>
-    <system:String x:Key="item9">Проверете дали сте избрали правилната директория, съдържаща вашите файлове на играта, това може да стане в менюто Настройки.</system:String>
+    <system:String x:Key="item9">Моля, проверете дали сте избрали правилната директория, съдържаща вашите файлове на играта.</system:String>
     <system:String x:Key="item10">Внимание:</system:String>
     <system:String x:Key="item11">Трябва да притежавате H1Z1: Just Survive на вашият  Steam  акаунт за да изтеглите. Този проект не поддържа пиратство.</system:String>
     <system:String x:Key="item12">Присъеденете се в общноста на</system:String>
@@ -52,7 +52,7 @@
     <system:String x:Key="item55">Използване на клон на приложението: {0}</system:String>
     <system:String x:Key="item56">Депо за обработка {0} - {1}</system:String>
     <system:String x:Key="item57">Предварително разпределяне на място...</system:String>
-    <system:String x:Key="item58">Версията на играта не се поддържа от H1Emu.\n\nМоля, не забравяйте да използвате версията на играта от 15 януари 2015 г., 22 декември 2016 г. (Just Survive) или 23 февруари 2017 г. (King of the Kill).\n\nТрябва да изтеглите една от тези версии като използвате този стартер с вашия акаунт в Steam, който притежава Just Survive.</system:String>
+    <system:String x:Key="item58">Версията на играта не се поддържа от H1Emu.\n\nМоля, не забравяйте да използвате версията на играта от 22 декември 2016 г.\n\nМожете да използвате този стартер, за да изтеглите необходимата версия на главната страница с вашия Steam акаунт, който притежава Just Survive, или като алтернатива , източник на файловете на играта от другаде.</system:String>
     <system:String x:Key="item59">Steam име</system:String>
     <system:String x:Key="item60">Парола</system:String>
     <system:String x:Key="item61">Вижте пълни подробности за обновлението...</system:String>
@@ -136,8 +136,9 @@
     <system:String x:Key="item156">За да играете на сървърите  на H1emu, ви трябва ключ за потвърждение. Може да намерите този ключ в профила ви на:</system:String>
     <system:String x:Key="item157">Най-новата версия на сървъра се разработва и имайте впредвид че неправилна работа е възможна.\n\nБихте ли желали да продължите?</system:String>
     <system:String x:Key="item158">Добре дошли в H1Emu!</system:String>
-    <system:String x:Key="item159">Преди да започнете имайте в предвид, че този проект подържа само следните версии:</system:String>
-    <system:String x:Key="item161">и</system:String>
+    <system:String x:Key="item159">ПРЕДИ ДА ЗАПОЧНЕТЕ, моля, имайте предвид, че този проект поддържа само следната версия на играта:</system:String>
+    <system:String x:Key="item160">.</system:String>
+    <system:String x:Key="item162">22 декември 2016 г</system:String>
     <system:String x:Key="item163">Моля</system:String>
     <system:String x:Key="item164">Недейте</system:String>
     <system:String x:Key="item165">Ако използвате най-новата версия на играта в Steam или друга неспомената няма да работи.</system:String>
