--- a/H1EmuLauncher/Language/StringResources.en-EN.xaml
+++ b/H1EmuLauncher/Language/StringResources.en-EN.xaml
@@ -7,7 +7,7 @@
     <system:String x:Key="item3">Version</system:String>
     <system:String x:Key="item4">Please wait</system:String>
     <system:String x:Key="item8">PLAY</system:String>
-    <system:String x:Key="item9">Check you have selected the correct directory containing your game files, this can be done in the Settings menu.</system:String>
+    <system:String x:Key="item9">Please check you have selected the correct directory containing your game files.</system:String>
     <system:String x:Key="item10">WARNING:</system:String>
     <system:String x:Key="item11">You must own H1Z1: Just Survive on your Steam account in order to download. This project does not support piracy.</system:String>
     <system:String x:Key="item12">Join the Community at</system:String>
@@ -52,7 +52,7 @@
     <system:String x:Key="item55">Using app branch: {0}</system:String>
     <system:String x:Key="item56">Processing depot {0} - {1}</system:String>
     <system:String x:Key="item57">Pre-allocating space...</system:String>
-    <system:String x:Key="item58">Game version not supported by H1Emu.\n\nPlease remember to use game version either 15th January 2015, 22nd December 2016 (Just Survive) or 23rd February 2017 (King of the Kill).\n\nYou need to download one of these versions using this launcher with your Steam account that has Just Survive ownership.</system:String>
+    <system:String x:Key="item58">Game version not supported by H1Emu.\n\nPlease remember to use the game version 22nd December 2016.\n\nYou can use this launcher to download the required version on the main page with your Steam account that has Just Survive ownership, or alternatively, source the game files from elsewhere.</system:String>
     <system:String x:Key="item59">Username...</system:String>
     <system:String x:Key="item60">Password...</system:String>
     <system:String x:Key="item61">View full details of the update...</system:String>
@@ -136,8 +136,9 @@
     <system:String x:Key="item156">To play on H1Emu Servers, you need to set an Account Key. You can find this on your profile at:</system:String>
     <system:String x:Key="item157">The latest version of the server is an in development build, be warned that it may be unstable and cause crashes.\n\nWould you like to continue?</system:String>
     <system:String x:Key="item158">Welcome to H1Emu!</system:String>
-    <system:String x:Key="item159">BEFORE YOU BEGIN, please note that this project only supports the following game versions:</system:String>
-    <system:String x:Key="item161">and</system:String>
+    <system:String x:Key="item159">BEFORE YOU BEGIN, please note that this project only supports the following game version:</system:String>
+    <system:String x:Key="item160">.</system:String>
+    <system:String x:Key="item162">22nd December 2016</system:String>
     <system:String x:Key="item163">Please</system:String>
     <system:String x:Key="item164">DO NOT</system:String>
     <system:String x:Key="item165">use the latest Steam version of the game or any other version that was not mentioned above as it will not work.</system:String>
