--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -7,7 +7,7 @@
     <system:String x:Key="item3">Versão</system:String>
     <system:String x:Key="item4">Por favor, espere</system:String>
     <system:String x:Key="item8">JOGAR</system:String>
-    <system:String x:Key="item9">Verifique se você selecionou o diretório correto contendo os arquivos do jogo, isso pode ser feito no menu Configurações.</system:String>
+    <system:String x:Key="item9">Verifique se você selecionou o diretório correto que contém os arquivos do jogo.</system:String>
     <system:String x:Key="item10">AVISO:</system:String>
     <system:String x:Key="item11">Tem de possuir H1Z1: Just Survive na sua conta Steam para fazer download do jogo. Este projecto não apoia a pirataria.</system:String>
     <system:String x:Key="item12">Junta-te à comunidade em</system:String>
@@ -52,7 +52,7 @@
     <system:String x:Key="item55">Utilizar o branch da app: {0}</system:String>
     <system:String x:Key="item56">Depósito de processamento {0} - {1}</system:String>
     <system:String x:Key="item57">Pré-alocação de espaço...</system:String>
-    <system:String x:Key="item58">Versão do jogo não suportada pelo H1Emu.\n\nLembre-se de usar a versão do jogo em 15 de janeiro de 2015, 22 de dezembro de 2016 (Just Survive) ou 23 de fevereiro de 2017 (King of the Kill).\n\nVocê precisa baixar uma dessas versões usando este iniciador com sua conta Steam que possui Just Survive.</system:String>
+    <system:String x:Key="item58">Versão do jogo não suportada pelo H1Emu.\n\nLembre-se de usar a versão do jogo de 22 de dezembro de 2016.\n\nVocê pode usar este inicializador para baixar a versão necessária na página principal com sua conta Steam que possui Just Survive ou, alternativamente, , obtenha os arquivos do jogo de outro lugar.</system:String>
     <system:String x:Key="item59">Nome de utilizador...</system:String>
     <system:String x:Key="item60">Senha...</system:String>
     <system:String x:Key="item61">Ver detalhes da atualização...</system:String>
@@ -136,8 +136,9 @@
     <system:String x:Key="item156">Para poder jogar nos servidores H1Emu, é necessário definir uma Chave da Conta. Pode encontrar isto no seu perfil em:</system:String>
     <system:String x:Key="item157">A versão recente do servidor é uma versão de desenvolvimento. Tenha em conta que pode ser instável e causar paragens.\n\n Deseja continuar de qualquer forma?</system:String>
     <system:String x:Key="item158">Bem vindo ao H1Emu!</system:String>
-    <system:String x:Key="item159">ANTES DE INICIAR, tenha atenção que este projeto apenas suporta as seguintes versões de jogo:</system:String>
-    <system:String x:Key="item161">e</system:String>
+    <system:String x:Key="item159">ANTES DE COMEÇAR, observe que este projeto suporta apenas a seguinte versão do jogo:</system:String>
+    <system:String x:Key="item160">.</system:String>
+    <system:String x:Key="item162">22 de dezembro de 2016</system:String>
     <system:String x:Key="item163">Por favor</system:String>
     <system:String x:Key="item164">NÃO</system:String>
     <system:String x:Key="item165">use a última versão Steam do jogo ou qualquer outra versão que não tenha sido mencionada acima, pois não funcionará.</system:String>
