--- a/H1EmuLauncher/Language/StringResources.ru-RU.xaml
+++ b/H1EmuLauncher/Language/StringResources.ru-RU.xaml
@@ -7,7 +7,7 @@
     <system:String x:Key="item3">Обновление</system:String>
     <system:String x:Key="item4">Пожалуйста подождите</system:String>
     <system:String x:Key="item8">ИГРАТЬ</system:String>
-    <system:String x:Key="item9">Убедитесь, что вы выбрали правильный каталог, содержащий файлы игры, это можно сделать в меню Настройки.</system:String>
+    <system:String x:Key="item9">Пожалуйста, убедитесь, что вы выбрали правильный каталог, содержащий файлы игры.</system:String>
     <system:String x:Key="item10">ВНИМАНИЕ:</system:String>
     <system:String x:Key="item11">Для загрузки вы должны иметь H1Z1: Just Survive в своей учетной записи Steam. Этот проект не поддерживает пиратство.</system:String>
     <system:String x:Key="item12">Присоединяйтесь к сообществу на</system:String>
@@ -52,7 +52,7 @@
     <system:String x:Key="item55">Использование ветки приложения: {0}</system:String>
     <system:String x:Key="item56">Обработка depot {0} - {1}</system:String>
     <system:String x:Key="item57">Выделение места...</system:String>
-    <system:String x:Key="item58">Версия игры не поддерживается H1Emu.\n\nНе забудьте использовать версию игры от 15 января 2015 г., 22 декабря 2016 г. (Just Survive) или 23 февраля 2017 г. (King of the Kill).\n\nВам нужно загрузить одну из этих версий, используя этот лаунчер с вашей учетной записью Steam, которой принадлежит Just Survive.</system:String>
+    <system:String x:Key="item58">Версия игры не поддерживается H1Emu.\n\nНе забудьте использовать версию игры от 22 декабря 2016 года.\n\nВы можете использовать этот лаунчер для загрузки необходимой версии на главной странице с вашей учетной записью Steam, владельцем которой является Just Survive, или альтернативно. , возьмите файлы игры из другого источника.</system:String>
     <system:String x:Key="item59">Имя пользователя...</system:String>
     <system:String x:Key="item60">Пароль...</system:String>
     <system:String x:Key="item61">Посмотреть полную информацию об обновлении...</system:String>
@@ -136,8 +136,9 @@
     <system:String x:Key="item156">Чтобы играть на серверах H1Emu, вам необходимо установить Ключ Учетной Записи. Вы можете найти его в своем профиле по адресу:</system:String>
     <system:String x:Key="item157">Последняя версия сервера - это сборка для разработки, имейте в виду, что она может работать нестабильно и вызывать сбои.\n\nВы все равно хотите продолжить?</system:String>
     <system:String x:Key="item158">Добро пожаловать в H1Emu!</system:String>
-    <system:String x:Key="item159">ПРЕЖДЕ ЧЕМ НАЧАТЬ, обратите внимание, что этот проект поддерживает только следующие версии игр:</system:String>
-    <system:String x:Key="item161">а также</system:String>
+    <system:String x:Key="item159">ПРЕЖДЕ ЧЕМ НАЧАТЬ, обратите внимание, что этот проект поддерживает только следующую версию игры:</system:String>
+    <system:String x:Key="item160">.</system:String>
+    <system:String x:Key="item162">22 декабря 2016 г</system:String>
     <system:String x:Key="item163">Пожалуйста</system:String>
     <system:String x:Key="item164">НЕ НАДО</system:String>
     <system:String x:Key="item165">используйте последнюю версию игры для Steam или любую другую версию, не упомянутую выше, так как это не сработает.</system:String>
